fix font-size on mobile

--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -52,7 +52,7 @@ $reference-width-xl: 1024px;
     padding-left: $container-padding * 2;
     padding-right: $container-padding;
     
-    font-size: rem(14px);
+    font-size: rem(18px);
     line-height: (25 / 18);
     
     margin-bottom: rem(100px);
